# Servus

./: README.md  example_bot.py  pyproject.toml  requirements.txt
docs/: index.html  index.md  search.js  servus.html
docs/servus/: __utils.html  discord_utils.html  models.html  requests.html
examples/: example_discord_bot.py
servus/: __init__.py  __utils.py  aioclient.py  discord_utils.py  main.py  models.py  requests.py
src/servus/: __init__.py  discord_utils.py  models.py  requests.py
tests/: test_client.py
